integración del endpoint para mostrar las ordenes de trabajo asociadas a un usuario - API
